# nockchain

./: .gitignore  Cargo.toml  flowchart TB.mmd
.demo_test/: wallet_info.json
.mining_analytics_demo/: current_mining_session.json  log_template.txt  logging_config.toml  mining_wallet.json
.mining_analytics_demo/analytics/: pattern_analysis.md
.mining_analytics_demo/dashboard/: config.json  index.html  live_data.json
.mining_analytics_demo/metrics/: performance_metrics.json  time_series.json
.mining_analytics_demo/reports/: mining_analytics_report.md
.mining_analytics_demo/visualizations/: charts_data.json  visualization_data.json
.real_wallet_demo/: config.toml
.test_parsing/: wallet_info.json
.test_real_wallet/: config.toml  wallet_info.json
.wallet_demo/: balance_report.md  security_checklist.md  wallet_info.json  wallet_setup_report.md
assets/: dumb.jam
docs/: CONTRIBUTING.md  INSTALLATION.md  README.md  ROADMAP.md  ZK_SYSTEM.md  api-reference.md  architecture.md  blockchain.md  build-system.md  comprehensive-review.md  hoon-system.md  networking.md  nockvm.md  operations.md  wallet.md
docs/crates/: README.md  (+8 more)
nockit/: Cargo.toml  README.md  setup.sh
nockit/examples/: README.md  comprehensive_usage.rs  mining_stats.py  mining_with_analytics.rs  nockchain_peers.toml  peer_helper.py  real_wallet_demo.rs  requirements.txt  setup_nockchain.sh  wallet_setup_demo.rs
nockit/src/: bench.rs  config.rs  crypto.rs  lib.rs  logging.rs  main.rs  mining.rs  monitoring.rs  network.rs  setup.rs  utils.rs  wallet.rs
nockit/tests/: integration_tests.rs
test-follower/: .nockchain_identity  .nockchain_identity.peerid
test-leader/: .nockchain_identity  .nockchain_identity.peerid
(+44 files in other folders)
